# lib/server/server.js
@@ -37,6 +37,8 @@ const ALLOWED_PARAMS = [
   "projectTag",
   "projectVersion",
   "parentUUID",
+  "parentProjectName",
+  "parentProjectVersion",
   "serverUrl",
   "apiKey",
   "specVersion",
